--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src",
+    "lint": "eslint src/",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "repository": {
@@ -15,11 +15,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.15",
-    "@storybook/addon-info": "^3.2.13",
-    "@storybook/addon-knobs": "^3.3.11",
-    "@storybook/addon-options": "3.2.16",
-    "@storybook/react": "3.2.16",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
@@ -46,13 +41,18 @@
     "webpack": "3.8.1"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^3.2.15",
+    "@storybook/addon-info": "^3.2.13",
+    "@storybook/addon-knobs": "^3.3.11",
+    "@storybook/addon-options": "3.2.16",
+    "@storybook/react": "3.2.16",
     "autoprefixer": "^7.2.5",
     "bootstrap": "^4.0.0",
     "bootstrap-sass": "3.3.7",
     "css-loader": "^0.28.9",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.13.0",
     "precss": "^3.1.0",
     "prop-types": "15.5.10",
     "react": "^16.2.0",
