--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Basic React Components like buttons, inputs and datePickers to be used on bigger components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src/",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "lint": "eslint --ext .js,.jsx src",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -15,35 +15,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.24.1",
     "babel-eslint": "7.2.3",
+    "babel-jest": "^22.2.0",
     "babel-loader": "7.0.0",
     "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "css-loader": "0.28.7",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.2.1",
+    "jest-cli": "^22.2.1",
     "node-sass": "4.5.2",
     "raw-loader": "0.5.1",
-    "react-addons-test-utils": "15.5.1",
-    "react-test-renderer": "15.5.4",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^0.14.7",
+    "react-test-renderer": "^15.6.2",
+    "regenerator-runtime": "^0.11.1",
     "sass-loader": "6.0.3",
     "storybook-addon-a11y": "^3.1.9",
     "storybook-addon-props": "3.0.2",
     "storybook-addon-scissors": "3.0.1",
     "style-loader": "0.19.0",
-    "webpack": "3.8.1","chai": "^3.5.0",
-    "enzyme": "^2.0.0",
-    "jsdom": "^8.1.0",
-    "mocha": "^3.0.2",
-    "react-addons-test-utils": "^0.14.7",
-    "sinon": "^1.17.3",
+    "webpack": "3.8.1"
   },
   "dependencies": {
     "@storybook/addon-actions": "^3.2.15",
@@ -54,9 +61,8 @@
     "autoprefixer": "^7.2.5",
     "bootstrap": "^4.0.0",
     "bootstrap-sass": "3.3.7",
-    "css-loader": "^0.28.9",
+    "enzyme": "^2.9.1",
     "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
     "popper.js": "^1.13.0",
     "precss": "^3.1.0",
     "prop-types": "15.5.10",
@@ -71,10 +77,7 @@
     "react-modal": "^3.1.8",
     "react-moment-proptypes": "1.5.0",
     "react-popper": "0.7.4",
-    "react-virtualized": "9.0.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.10.0"
+    "react-virtualized": "9.0.0"
   },
   "bugs": {
     "url": "https://github.com/AVivero/em-cmp-quartzs/issues"
